translated all files

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -315,5 +315,69 @@
     "partners": {
       "title": "شركاؤنا"
     }
+  },
+  "services": {
+    "bigData": [
+      {
+        "icon": "icon1.png",
+        "title": "تنفيذ نماذج اللغات الكبيرة في الأعمال",
+        "text": "استخدام نماذج الذكاء الاصطناعي التوليدي لتقدم الأعمال - استغل قدرات نماذج الذكاء الاصطناعي التوليدي لرفع مستوى عمليات صنع القرار، وكشف رؤى قيمة، وتعزيز الكفاءة التشغيلية، واكتساب ميزة تنافسية كبيرة. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon2.png",
+        "title": "البحث الدلالي المتجهي",
+        "text": "إطلاق الدقة باستخدام البحث الدلالي المتجهي - استخدم قوة البحث المتجهي ومعالجة اللغة الطبيعية (NLP) لتفسير نوايا المستخدم بسرعة ودقة، متجاوزًا الحاجة إلى تطابق الكلمات الرئيسية الدقيق. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon3.png",
+        "title": "تطوير الذكاء الاصطناعي التوليدي",
+        "text": "تمكين المطورين بأدوات الذكاء الاصطناعي التوليدي - قم بتحسين إنتاجية المطورين من خلال دمج أدوات الذكاء الاصطناعي مثل GitHub Pilot وMicrosoft Copilot. قم بتبسيط سير العمل وتسريع عمليات الترميز لتعزيز الكفاءة والتطوير الأسرع. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon4.png",
+        "title": "تطوير الوكلاء المستقلين",
+        "text": "تمكين المهام التنظيمية باستخدام وكلاء الذكاء الاصطناعي المستقلين - قم بتنفيذ وكلاء الذكاء الاصطناعي المستقلين مثل AutoGPT أو BabyAGI الذين يعملون بشكل مستقل، ويتعلمون ديناميكيًا، ويتكيفون بسلاسة، مما يعزز قدرات مؤسستك في المهام اليومية. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon5.png",
+        "title": "توليد النصوص",
+        "text": "تعزيز إنشاء المحتوى باستخدام الذكاء الاصطناعي التوليدي - قم بضخ الذكاء الاصطناعي التوليدي في عملية إنشاء المحتوى لإنتاج محتوى شامل، مما يعزز الكفاءة والفعالية الشاملة. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon6.png",
+        "title": "الضبط الدقيق لنماذج الذكاء الاصطناعي",
+        "text": "تخصيص مخرجات الذكاء الاصطناعي لتلبية احتياجات محددة - قم بتخصيص مخرجات نموذج الذكاء الاصطناعي لتتوافق مع متطلباتك المحددة. قم بضبط نماذج الذكاء الاصطناعي المدربة مسبقًا لمهام محددة، مما يعزز الأداء ويقلل أوقات التدريب. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon7.png",
+        "title": "توليد الصور",
+        "text": "الوصول إلى الموارد الإبداعية من خلال توليد الصور الفوري - استفد من مجموعة موارد غير محدودة تقريبًا من الرسومات الإبداعية والتخيلية التي يتم إنشاؤها على الفور لتوفير الوقت والتكاليف. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon8.png",
+        "title": "التعلم المعزز من ردود الفعل البشرية (RLHF)",
+        "text": "تحسين مخرجات الذكاء الاصطناعي باستخدام التعلم المعزز وردود الفعل البشرية - اجمع بين التعلم المعزز وردود الفعل البشرية لتحسين نماذج الذكاء الاصطناعي وتطويرها بشكل متكرر. مكّن أنظمة الذكاء الاصطناعي من تعلم السلوكيات المثلى، مما يؤدي إلى مخرجات أكثر دقة وكفاءة وقوة. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon9.png",
+        "title": "أتمتة المهام المحسنة",
+        "text": "تبسيط العمليات من خلال الأتمتة المحسنة - قم بأتمتة المهام وتسريعها، وتقليل الوقت والجهد المطلوبين. حسّن الدقة، وقلل الأخطاء، وعزز جودة المهام بشكل عام. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon10.png",
+        "title": "تحليل البيانات المحسن",
+        "text": "رفع مستوى تحليل البيانات من خلال الرؤى المولدة بواسطة الذكاء الاصطناعي - استفد من الرؤى المولدة بواسطة الذكاء الاصطناعي لجمع وتنظيم وتصور مجموعات البيانات الواسعة. تسريع تطوير المنتجات وتجاوز المنافسين في نمو الأعمال. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon11.png",
+        "title": "تطوير البرمجيات المعزز",
+        "text": "زيادة الكفاءة في تطوير البرمجيات - زيادة كفاءة تطوير البرمجيات من خلال دعم المبرمجين بأدوات تعزز الإنتاجية، وتقلل الإحباط، وتحافظ على التركيز على مهامهم. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      },
+      {
+        "icon": "icon12.png",
+        "title": "خفض التكاليف",
+        "text": "تحسين العمليات اليومية باستخدام حلول تعتمد على نماذج اللغات الكبيرة - خفض التكاليف التشغيلية اليومية من خلال تنفيذ حلول تعتمد على نماذج اللغات الكبيرة لدعم العمليات الروتينية. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
+      }
+    ]
   }
 }
