--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -316,5 +316,69 @@
     "partners": {
       "title": "আমাদের অংশীদার"
     }
+  },
+  "services": {
+    "bigData": [
+      {
+        "icon": "icon1.png",
+        "title": "ব্যবসা ক্ষেত্রে LLM প্রয়োগ করা",
+        "text": "ব্যবসার অগ্রগতির জন্য জেনারেটিভ এআই মডেল ব্যবহার করা - সিদ্ধান্ত গ্রহণের প্রক্রিয়া উন্নত করতে, মূল্যবান অন্তর্দৃষ্টি উন্মোচন করতে, কর্মক্ষম দক্ষতা বাড়াতে এবং একটি উল্লেখযোগ্য প্রতিযোগিতামূলক সুবিধা অর্জনের জন্য জেনারেটিভ এআই মডেলের ক্ষমতা ব্যবহার করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon2.png",
+        "title": "ভেক্টর সিম্যান্টিক অনুসন্ধান",
+        "text": "ভেক্টর সিম্যান্টিক অনুসন্ধানের মাধ্যমে নির্ভুলতা আনলক করা - সঠিক কীওয়ার্ড মিলের প্রয়োজনীয়তা এড়িয়ে ব্যবহারকারীর উদ্দেশ্যগুলি দ্রুত এবং নির্ভুলভাবে ব্যাখ্যা করতে ভেক্টর অনুসন্ধান এবং প্রাকৃতিক ভাষা প্রক্রিয়াকরণ (এনএলপি) এর দক্ষতা ব্যবহার করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon3.png",
+        "title": "জেনারেটিভ এআই উন্নয়ন",
+        "text": "জেনারেটিভ এআই সরঞ্জাম দিয়ে বিকাশকারীদের ক্ষমতায়ন করা - GitHub Pilot এবং Microsoft Copilot এর মতো AI সরঞ্জাম অন্তর্ভুক্ত করে বিকাশকারীদের উত্পাদনশীলতা অপ্টিমাইজ করুন। দক্ষতা এবং দ্রুত বিকাশের জন্য কর্মপ্রবাহকে স্ট্রীমলাইন করুন এবং কোডিং প্রক্রিয়াগুলিকে দ্রুত করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon4.png",
+        "title": "স্বায়ত্তশাসিত এজেন্ট উন্নয়ন",
+        "text": "স্বায়ত্তশাসিত এআই এজেন্টদের সাথে সাংগঠনিক কাজগুলিকে শক্তিশালী করুন - AutoGPT বা BabyAGI এর মতো স্বায়ত্তশাসিত এআই এজেন্ট প্রয়োগ করুন যা স্বাধীনভাবে কাজ করে, গতিশীলভাবে শেখে এবং নির্বিঘ্নে মানিয়ে নেয়, দৈনন্দিন কাজে আপনার সংস্থার ক্ষমতা বাড়ায়। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon5.png",
+        "title": "পাঠ্য তৈরি",
+        "text": "জেনারেটিভ এআই দিয়ে সামগ্রী তৈরি বৃদ্ধি করা - সামগ্রিক দক্ষতা এবং কার্যকারিতা বাড়িয়ে ব্যাপক সামগ্রী তৈরি করতে আপনার সামগ্রী তৈরি প্রক্রিয়ায় জেনারেটিভ এআই যুক্ত করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon6.png",
+        "title": "এআই মডেলের সূক্ষ্ম-টিউনিং",
+        "text": "নির্দিষ্ট প্রয়োজনের জন্য এআই আউটপুট তৈরি করা - আপনার নির্দিষ্ট প্রয়োজনীয়তার সাথে সামঞ্জস্য রেখে এআই মডেলের আউটপুট কাস্টমাইজ করুন। নির্দিষ্ট কাজের জন্য প্রি-ট্রেনড এআই মডেলগুলিকে সূক্ষ্ম-টিউন করুন, কর্মক্ষমতা বাড়ান এবং প্রশিক্ষণের সময় হ্রাস করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon7.png",
+        "title": "চিত্র তৈরি",
+        "text": "তাত্ক্ষণিক চিত্র তৈরির মাধ্যমে সৃজনশীল সংস্থানগুলিতে অ্যাক্সেস করা - সময় এবং খরচ উভয়ই বাঁচাতে তাত্ক্ষণিকভাবে তৈরি সৃজনশীল এবং কল্পনাপ্রসূত গ্রাফিক্সের কার্যত সীমাহীন সংস্থান পুলে আলতো চাপুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon8.png",
+        "title": "মানুষের প্রতিক্রিয়া থেকে শক্তিবৃদ্ধি শিক্ষা (RLHF)",
+        "text": "শক্তিবৃদ্ধি শিক্ষা এবং মানুষের প্রতিক্রিয়া দিয়ে এআই আউটপুট অপ্টিমাইজ করা - পুনরাবৃত্তিমূলকভাবে এআই মডেলগুলিকে পরিমার্জন এবং উন্নত করতে মানুষের প্রতিক্রিয়ার সাথে শক্তিবৃদ্ধি শিক্ষা একত্রিত করুন। এআই সিস্টেমগুলিকে সর্বোত্তম আচরণ শিখতে সক্ষম করুন, যার ফলে আরও সঠিক, দক্ষ এবং শক্তিশালী আউটপুট পাওয়া যায়। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon9.png",
+        "title": "বর্ধিত টাস্ক অটোমেশন",
+        "text": "বর্ধিত অটোমেশন এর মাধ্যমে অপারেশন স্ট্রীমলাইন করা - টাস্ক স্বয়ংক্রিয় এবং দ্রুত করুন, প্রয়োজনীয় সময় এবং প্রচেষ্টা হ্রাস করুন। নির্ভুলতা উন্নত করুন, ত্রুটি হ্রাস করুন এবং সামগ্রিক টাস্কের গুণমান বাড়ান। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon10.png",
+        "title": "উন্নত ডেটা বিশ্লেষণ",
+        "text": "এআই-উৎপাদিত অন্তর্দৃষ্টির মাধ্যমে ডেটা বিশ্লেষণ উন্নত করা - বিস্তৃত ডেটাসেট সংগ্রহ, সংগঠিত এবং কল্পনা করার জন্য এআই-উৎপাদিত অন্তর্দৃষ্টি ব্যবহার করুন। পণ্য উন্নয়ন ত্বরান্বিত করুন এবং ব্যবসায়িক বৃদ্ধিতে প্রতিযোগীদের ছাড়িয়ে যান। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon11.png",
+        "title": "বুস্টেড সফটওয়্যার ডেভেলপমেন্ট",
+        "text": "সফটওয়্যার ডেভেলপমেন্টে দক্ষতা বৃদ্ধি করা - প্রোগ্রামারদের উৎপাদনশীলতা বৃদ্ধি, হতাশা হ্রাস এবং তাদের কাজের উপর মনোযোগ বজায় রাখতে সহায়তা করে এমন সরঞ্জামগুলির মাধ্যমে সফটওয়্যার ডেভেলপমেন্টের দক্ষতা বৃদ্ধি করুন। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      },
+      {
+        "icon": "icon12.png",
+        "title": "খরচ কমানো",
+        "text": "এলএলএম-ভিত্তিক সমাধানগুলির সাথে দৈনন্দিন কার্যক্রম অপ্টিমাইজ করা - রুটিন কার্যক্রম সমর্থন করার জন্য এলএলএম-ভিত্তিক সমাধান প্রয়োগ করে দৈনন্দিন অপারেশনাল খরচ কমান। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
+      }
+    ]
   }
 }
