--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -307,5 +307,69 @@
     "partners": {
       "title": "パートナー"
     }
+  },
+  "services": {
+    "bigData": [
+      {
+        "icon": "icon1.png",
+        "title": "ビジネスにおけるLLMの実装",
+        "text": "ビジネスの発展のために生成AIモデルを活用 - 生成AIモデルの能力を活用して、意思決定プロセスを向上させ、貴重な洞察を明らかにし、運用効率を高め、実質的な競争優位性を獲得します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon2.png",
+        "title": "ベクトル意味検索",
+        "text": "ベクトル意味検索で精度を解き放つ - ベクトル検索と自然言語処理（NLP）の能力を利用して、正確なキーワード一致の必要性を回避し、ユーザーの意図を迅速かつ正確に解釈します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon3.png",
+        "title": "生成AI開発",
+        "text": "生成AIツールで開発者を強化 - GitHub PilotやMicrosoft CopilotなどのAIツールを組み込むことで、開発者の生産性を最適化します。ワークフローを合理化し、コーディングプロセスを迅速化して、効率と迅速な開発を促進します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon4.png",
+        "title": "自律エージェント開発",
+        "text": "自律AIエージェントで組織のタスクを強化 - AutoGPTやBabyAGIのような自律AIエージェントを実装し、独立して動作し、動的に学習し、シームレスに適応し、日常業務における組織の能力を強化します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon5.png",
+        "title": "テキスト生成",
+        "text": "生成AIでコンテンツ作成を強化 - 生成AIをコンテンツ作成プロセスに注入して包括的なコンテンツを生成し、全体的な効率と効果を高めます。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon6.png",
+        "title": "AIモデルのファインチューニング",
+        "text": "特定のニーズに合わせてAI出力を調整 - 特定の要件に合わせてAIモデルの出力をカスタマイズします。特定のタスクに合わせて事前トレーニングされたAIモデルを微調整し、パフォーマンスを向上させ、トレーニング時間を短縮します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon7.png",
+        "title": "画像生成",
+        "text": "インスタント画像生成でクリエイティブなリソースにアクセス - 時間とコストの両方を節約するために即座に生成される創造的で想像力豊かなグラフィックの事実上無限のリソースプールを活用します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon8.png",
+        "title": "人間のフィードバックからの強化学習（RLHF）",
+        "text": "強化学習と人間のフィードバックでAI出力を最適化 - 強化学習と人間のフィードバックを組み合わせて、AIモデルを反復的に改良および改善します。AIシステムが最適な動作を学習できるようにし、より正確で効率的で堅牢な出力を実現します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon9.png",
+        "title": "強化されたタスク自動化",
+        "text": "強化された自動化による業務の合理化 - タスクを自動化および迅速化し、必要な時間と労力を最小限に抑えます。精度を向上させ、エラーを減らし、全体的なタスク品質を向上させます。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon10.png",
+        "title": "改善されたデータ分析",
+        "text": "AI生成の洞察によるデータ分析の向上 - AI生成の洞察を活用して、広範なデータセットを収集、整理、視覚化します。製品開発を加速し、ビジネス成長で競合他社を凌駕します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon11.png",
+        "title": "ブーストされたソフトウェア開発",
+        "text": "ソフトウェア開発の効率を強化 - 生産性を向上させ、フラストレーションを軽減し、タスクに集中できるようにするツールでプログラマーをサポートすることにより、ソフトウェア開発の効率を高めます。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      },
+      {
+        "icon": "icon12.png",
+        "title": "コスト削減",
+        "text": "LLMベースのソリューションによる日常業務の最適化 - ルーチン業務をサポートするためにLLMベースのソリューションを実装することにより、日常の運用コストを削減します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
+      }
+    ]
   }
 }
