--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -370,5 +370,69 @@
     "partners": {
       "title": "Our Partners"
     }
+  },
+  "services": {
+    "bigData": [
+      {
+        "icon": "icon1.png",
+        "title": "Implementing LLMs in Business",
+        "text": "Utilizing Generative AI Models for Business Advancement - Harness the capabilities of generative AI models to elevate decision-making processes, unveil valuable insights, enhance operational efficiency, and gain a substantial competitive advantage. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon2.png",
+        "title": "Vector Semantic Search",
+        "text": "Unlocking Precision with Vector Semantic Search - Employ the prowess of vector search and natural language processing (NLP) to swiftly and accurately interpret user intents, bypassing the necessity for an exact keyword match. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon3.png",
+        "title": "Generative AI Development",
+        "text": "Empowering Developers with Generative AI Tools - Optimize developers' productivity by incorporating AI tools such as GitHub Pilot and Microsoft Copilot. Streamline workflows and expedite coding processes to foster efficiency and faster development. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon4.png",
+        "title": "Autonomous Agent Development",
+        "text": "Empower Organizational Tasks with Autonomous AI Agents - Implement autonomous AI agents like AutoGPT or BabyAGI that operate independently, learn dynamically, and adapt seamlessly, bolstering your organization's capabilities in daily tasks. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon5.png",
+        "title": "Text Generation",
+        "text": "Enhancing Content Creation with Generative AI - Infuse generative AI into your content creation process to produce comprehensive content, enhancing overall efficiency and effectiveness. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon6.png",
+        "title": "Fine-tuning AI Models",
+        "text": "Tailoring AI Outputs for Specific Needs - Customize AI model outputs to align with your specific requirements. Fine-tune pre-trained AI models for specific tasks, enhancing performance and reducing training times. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon7.png",
+        "title": "Image Generation",
+        "text": "Accessing Creative Resources with Instant Image Generation - Tap into a virtually infinite resource pool of creative and imaginative graphics generated instantly to save both time and costs. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon8.png",
+        "title": "Reinforcement Learning from Human Feedback (RLHF)",
+        "text": "Optimizing AI Outputs with Reinforcement Learning and Human Feedback - Combine reinforcement learning with human feedback to refine and improve AI models iteratively. Enable AI systems to learn optimal behaviors, resulting in more accurate, efficient, and robust outputs. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon9.png",
+        "title": "Enhanced Task Automation",
+        "text": "Streamlining Operations through Enhanced Automation - Automate and expedite tasks, minimizing the time and effort required. Improve accuracy, reduce errors, and enhance overall task quality. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon10.png",
+        "title": "Improved Data Analysis",
+        "text": "Elevating Data Analysis through AI-generated Insights - Leverage AI-generated insights to collect, organize, and visualize extensive datasets. Accelerate product development and outpace competitors in business growth. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon11.png",
+        "title": "Boosted Software Development",
+        "text": "Augmenting Efficiency in Software Development - Increase the efficiency of software development by supporting programmers with tools that enhance productivity, reduce frustration, and maintain focus on their tasks. This is additional text for the card that will be revealed when the button is clicked."
+      },
+      {
+        "icon": "icon12.png",
+        "title": "Reduced Costs",
+        "text": "Optimizing Daily Operations with LLM-based Solutions - Drive down daily operational costs by implementing LLM-based solutions to support routine operations. This is additional text for the card that will be revealed when the button is clicked."
+      }
+    ]
   }
 }
