our technologi page translated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -379,5 +379,32 @@
         "text": "تحسين العمليات اليومية باستخدام حلول تعتمد على نماذج اللغات الكبيرة - خفض التكاليف التشغيلية اليومية من خلال تنفيذ حلول تعتمد على نماذج اللغات الكبيرة لدعم العمليات الروتينية. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
       }
     ]
+  },
+
+  "technologyList": {
+    "ourTechnology": "تكنولوجياتنا",
+    "description": "في {{companyName}}، نحن في طليعة الابتكار التكنولوجي. تم بناء حلولنا البرمجية باستخدام أحدث التقنيات وأكثرها موثوقية لضمان الأداء العالي وقابلية التوسع والأمان.",
+    "frontendTechnologies": "تقنيات الواجهة الأمامية",
+    "backendTechnologies": "تقنيات الواجهة الخلفية",
+    "technologies": {
+      "frontend": {
+        "React.js": "مكتبة JavaScript لبناء واجهات المستخدم.",
+        "Vue.js": "إطار عمل JavaScript التدريجي.",
+        "Angular": "إطار عمل واحد. للجوال وسطح المكتب.",
+        "Next.js": "إطار عمل React للإنتاج.",
+        "MUI": "إطار عمل لمطوري الويب الطموحين.",
+        "Chakra UI": "يعطي بنية لتطبيقات الويب من خلال توفير نماذج مع ربط المفتاح والقيمة.",
+        "Streamlit": "إطار عمل لإنشاء تطبيقات البيانات بلغة Python الخالصة."
+      },
+      "backend": {
+        "Node.js": "بيئة تشغيل JavaScript مبنية على محرك V8 من Chrome.",
+        "Django": "إطار عمل ويب Python عالي المستوى يشجع على التطوير السريع.",
+        "Spring Boot": "إطار عمل يبسط تطوير التطبيقات المستندة إلى Java.",
+        "Python": "لغة برمجة متعددة الاستخدامات وعالية المستوى معروفة ببساطتها.",
+        "Go": "لغة برمجة مجمعة ذات كتابة ثابتة تم تصميمها في Google.",
+        "Rust": "لغة برمجة نظام تعمل بسرعة فائقة وتمنع أخطاء التجزئة وتضمن أمان سلاسل العمليات.",
+        "Laravel": "إطار عمل PHP لفنانين الويب، يوفر صياغة أنيقة وأدوات قوية."
+      }
+    }
   }
 }
