--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -371,5 +371,31 @@
         "text": "LLMベースのソリューションによる日常業務の最適化 - ルーチン業務をサポートするためにLLMベースのソリューションを実装することにより、日常の運用コストを削減します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
       }
     ]
+  },
+  "technologyList": {
+    "ourTechnology": "私たちのテクノロジー",
+    "description": "{{companyName}}では、私たちは技術革新の最前線に立っています。当社のソフトウェアソリューションは、高性能、スケーラビリティ、およびセキュリティを確保するために、最新かつ最も信頼性の高いテクノロジーを使用して構築されています。",
+    "frontendTechnologies": "フロントエンドテクノロジー",
+    "backendTechnologies": "バックエンドテクノロジー",
+    "technologies": {
+      "frontend": {
+        "React.js": "ユーザーインターフェイスを構築するためのJavaScriptライブラリです。",
+        "Vue.js": "プログレッシブJavaScriptフレームワーク。",
+        "Angular": "1つのフレームワーク。モバイルとデスクトップに対応。",
+        "Next.js": "本番環境向けのReactフレームワーク。",
+        "MUI": "意欲的なWeb開発者向けのフレームワーク。",
+        "Chakra UI": "キーと値のバインディングを備えたモデルを提供することにより、Webアプリケーションに構造を提供します。",
+        "Streamlit": "純粋なPythonでデータアプリを作成するためのフレームワーク。"
+      },
+      "backend": {
+        "Node.js": "ChromeのV8エンジン上に構築されたJavaScriptランタイム。",
+        "Django": "迅速な開発を促進する高レベルのPython Webフレームワーク。",
+        "Spring Boot": "Javaベースのアプリケーションの開発を簡素化するフレームワーク。",
+        "Python": "シンプルさで知られる、用途の広い高レベルのプログラミング言語。",
+        "Go": "Googleで設計された、静的に型付けされたコンパイル済みプログラミング言語。",
+        "Rust": "非常に高速に動作し、セグメンテーションフォールトを防ぎ、スレッドセーフを保証するシステムプログラミング言語。",
+        "Laravel": "エレガントな構文と堅牢なツールを提供する、Web職人向けのPHPフレームワーク。"
+      }
+    }
   }
 }
