translaled products page

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -406,5 +406,48 @@
         "Laravel": "إطار عمل PHP لفنانين الويب، يوفر صياغة أنيقة وأدوات قوية."
       }
     }
+  },
+  "products": {
+    "ourProducts": "منتجاتنا",
+    "govt": "حكومي",
+    "seo": "نظام تخطيط موارد المؤسسات لوكالات السيو",
+    "financial": "المؤسسات المالية",
+    "corporate": "الشركات",
+    "ecommerce": "التجارة الإلكترونية",
+    "corporateSolutions": "حلول الشركات",
+    "corporateDescription": "قم بتبسيط عمليات شركتك من خلال حلولنا البرمجية المبتكرة:",
+    "erp": "تخطيط موارد المؤسسات (ERP)",
+    "crm": "إدارة علاقات العملاء (CRM)",
+    "hrms": "أنظمة إدارة الموارد البشرية (HRMS)",
+    "dataAnalytics": "تحليلات البيانات وإعداد التقارير",
+    "corporateEnhance": "عزز كفاءة عملك وعمليات اتخاذ القرار من خلال حلولنا المخصصة.",
+    "ecommerceSolutions": "حلول التجارة الإلكترونية",
+    "ecommerceDescription": "قم بزيادة مبيعاتك عبر الإنترنت إلى أقصى حد من خلال حلول التجارة الإلكترونية الشاملة لدينا:",
+    "customStore": "منصات متاجر مخصصة عبر الإنترنت",
+    "paymentGateway": "تكاملات بوابة الدفع",
+    "inventoryManagement": "أنظمة إدارة المخزون",
+    "customerExperience": "تحسين تجربة العملاء",
+    "ecommerceGrow": "قم بتنمية أعمال التجارة الإلكترونية الخاصة بك من خلال حلولنا القابلة للتطوير والآمنة.",
+    "financialSolutions": "حلول المؤسسات المالية",
+    "financialDescription": "تم تصميم حلولنا البرمجية المالية لتحسين أداء وأمان المؤسسات المالية:",
+    "onlineBanking": "منصات الخدمات المصرفية عبر الإنترنت",
+    "fraudDetection": "أنظمة الكشف عن الاحتيال",
+    "investmentManagement": "أدوات إدارة الاستثمار",
+    "riskManagement": "حلول إدارة المخاطر",
+    "financialEnsure": "تأكد من نمو مؤسستك وموثوقيتها من خلال أحدث التقنيات لدينا.",
+    "govtSolutions": "الحلول الحكومية",
+    "govtDescription": "نحن نقدم حلول برمجية شاملة مصممة للمؤسسات الحكومية. تشمل خدماتنا:",
+    "publicAdmin": "أنظمة الإدارة العامة",
+    "eGovernance": "منصات الحكومة الإلكترونية",
+    "dataSecurity": "أمن البيانات وإدارتها",
+    "citizenEngagement": "أدوات مشاركة المواطنين",
+    "govtDesigned": "تم تصميم حلولنا لتعزيز الكفاءة والشفافية وثقة الجمهور.",
+    "seoSolutions": "حلول وكالات السيو",
+    "seoDescription": "قم بتمكين استراتيجيات السيو الخاصة بك من خلال أدواتنا ومنصاتنا المتقدمة:",
+    "keywordResearch": "البحث عن الكلمات الرئيسية والتحليلات",
+    "siteAudit": "تدقيق الموقع وتحسينه",
+    "contentManagement": "أنظمة إدارة المحتوى",
+    "backlinkMonitoring": "مراقبة الروابط الخلفية",
+    "seoBoost": "عزز تصنيفات محركات البحث لعملائك وقم بتوجيه المزيد من الزيارات المجانية من خلال حلولنا المتخصصة."
   }
 }
