--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -406,5 +406,48 @@
         "Laravel": "ওয়েব কারিগরদের জন্য একটি PHP ফ্রেমওয়ার্ক, যা মার্জিত সিনট্যাক্স এবং শক্তিশালী সরঞ্জাম সরবরাহ করে।"
       }
     }
+  },
+  "products": {
+    "ourProducts": "আমাদের পণ্যসমূহ",
+    "govt": "সরকারি",
+    "seo": "এসইও এজেন্সিগুলির জন্য ইআরপি",
+    "financial": "আর্থিক প্রতিষ্ঠান",
+    "corporate": "কর্পোরেট",
+    "ecommerce": "ই-কমার্স",
+    "corporateSolutions": "কর্পোরেট সমাধান",
+    "corporateDescription": "আমাদের উদ্ভাবনী সফটওয়্যার সমাধানগুলির মাধ্যমে আপনার কর্পোরেট কার্যক্রমকে সুবিন্যস্ত করুন:",
+    "erp": "এন্টারপ্রাইজ রিসোর্স প্ল্যানিং (ইআরপি)",
+    "crm": "কাস্টমার রিলেশনশিপ ম্যানেজমেন্ট (সিআরএম)",
+    "hrms": "হিউম্যান রিসোর্স ম্যানেজমেন্ট সিস্টেম (এইচআরএমএস)",
+    "dataAnalytics": "ডেটা অ্যানালিটিক্স এবং রিপোর্টিং",
+    "corporateEnhance": "আমাদের কাস্টমাইজড সমাধানগুলির মাধ্যমে আপনার ব্যবসার দক্ষতা এবং সিদ্ধান্ত গ্রহণের প্রক্রিয়া উন্নত করুন।",
+    "ecommerceSolutions": "ই-কমার্স সমাধান",
+    "ecommerceDescription": "আমাদের বিস্তৃত ই-কমার্স সমাধানগুলির মাধ্যমে আপনার অনলাইন বিক্রয় সর্বাধিক করুন:",
+    "customStore": "কাস্টমাইজেবল অনলাইন স্টোর প্ল্যাটফর্ম",
+    "paymentGateway": "পেমেন্ট গেটওয়ে ইন্টিগ্রেশন",
+    "inventoryManagement": "ইনভেন্টরি ম্যানেজমেন্ট সিস্টেম",
+    "customerExperience": "গ্রাহকের অভিজ্ঞতা বৃদ্ধি",
+    "ecommerceGrow": "আমাদের স্কেলেবল এবং সুরক্ষিত সমাধানগুলির মাধ্যমে আপনার ই-কমার্স ব্যবসা বৃদ্ধি করুন।",
+    "financialSolutions": "আর্থিক প্রতিষ্ঠান সমাধান",
+    "financialDescription": "আমাদের আর্থিক সফটওয়্যার সমাধানগুলি আর্থিক প্রতিষ্ঠানগুলির কর্মক্ষমতা এবং সুরক্ষা বৃদ্ধির জন্য ডিজাইন করা হয়েছে:",
+    "onlineBanking": "অনলাইন ব্যাংকিং প্ল্যাটফর্ম",
+    "fraudDetection": "জালিয়াতি সনাক্তকরণ সিস্টেম",
+    "investmentManagement": "বিনিয়োগ ব্যবস্থাপনা সরঞ্জাম",
+    "riskManagement": "ঝুঁকি ব্যবস্থাপনা সমাধান",
+    "financialEnsure": "আমাদের অত্যাধুনিক প্রযুক্তির মাধ্যমে আপনার প্রতিষ্ঠানের বৃদ্ধি এবং নির্ভরযোগ্যতা নিশ্চিত করুন।",
+    "govtSolutions": "সরকারি সমাধান",
+    "govtDescription": "আমরা সরকারি প্রতিষ্ঠানগুলির জন্য তৈরি ব্যাপক সফটওয়্যার সমাধান সরবরাহ করি। আমাদের পরিষেবাগুলির মধ্যে রয়েছে:",
+    "publicAdmin": "গণপ্রশাসন সিস্টেম",
+    "eGovernance": "ই-গভর্নেন্স প্ল্যাটফর্ম",
+    "dataSecurity": "ডেটা সুরক্ষা এবং ব্যবস্থাপনা",
+    "citizenEngagement": "নাগরিক সম্পৃক্ততা সরঞ্জাম",
+    "govtDesigned": "আমাদের সমাধানগুলি দক্ষতা, স্বচ্ছতা এবং জন আস্থা বৃদ্ধির জন্য ডিজাইন করা হয়েছে।",
+    "seoSolutions": "এসইও এজেন্সি সমাধান",
+    "seoDescription": "আমাদের উন্নত সরঞ্জাম এবং প্ল্যাটফর্মগুলির মাধ্যমে আপনার এসইও কৌশলগুলিকে শক্তিশালী করুন:",
+    "keywordResearch": "কীওয়ার্ড গবেষণা এবং বিশ্লেষণ",
+    "siteAudit": "সাইট অডিট এবং অপ্টিমাইজেশান",
+    "contentManagement": "কন্টেন্ট ম্যানেজমেন্ট সিস্টেম",
+    "backlinkMonitoring": "ব্যাকলিংক পর্যবেক্ষণ",
+    "seoBoost": "আমাদের বিশেষজ্ঞ সমাধানগুলির মাধ্যমে আপনার ক্লায়েন্টদের সার্চ ইঞ্জিন র‍্যাঙ্কিং বাড়ান এবং আরও অর্গানিক ট্র্যাফিক চালান।"
   }
 }
