--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -460,5 +460,48 @@
         "Laravel": "A PHP framework for web artisans, providing elegant syntax and robust tools."
       }
     }
+  },
+  "products": {
+    "ourProducts": "Our Products",
+    "govt": "Govt.",
+    "seo": "ERP for SEO Agencies",
+    "financial": "Financial Institutions",
+    "corporate": "Corporate",
+    "ecommerce": "E-Commerce",
+    "corporateSolutions": "Corporate Solutions",
+    "corporateDescription": "Streamline your corporate operations with our innovative software solutions:",
+    "erp": "Enterprise resource planning (ERP)",
+    "crm": "Customer relationship management (CRM)",
+    "hrms": "Human resources management systems (HRMS)",
+    "dataAnalytics": "Data analytics and reporting",
+    "corporateEnhance": "Enhance your business efficiency and decision-making processes with our customized solutions.",
+    "ecommerceSolutions": "E-Commerce Solutions",
+    "ecommerceDescription": "Maximize your online sales with our comprehensive e-commerce solutions:",
+    "customStore": "Customizable online store platforms",
+    "paymentGateway": "Payment gateway integrations",
+    "inventoryManagement": "Inventory management systems",
+    "customerExperience": "Customer experience enhancements",
+    "ecommerceGrow": "Grow your e-commerce business with our scalable and secure solutions.",
+    "financialSolutions": "Financial Institutions Solutions",
+    "financialDescription": "Our financial software solutions are designed to enhance the performance and security of financial institutions:",
+    "onlineBanking": "Online banking platforms",
+    "fraudDetection": "Fraud detection systems",
+    "investmentManagement": "Investment management tools",
+    "riskManagement": "Risk management solutions",
+    "financialEnsure": "Ensure your institution's growth and reliability with our state-of-the-art technology.",
+    "govtSolutions": "Government Solutions",
+    "govtDescription": "We provide comprehensive software solutions tailored for government institutions. Our services include:",
+    "publicAdmin": "Public administration systems",
+    "eGovernance": "E-Governance platforms",
+    "dataSecurity": "Data security and management",
+    "citizenEngagement": "Citizen engagement tools",
+    "govtDesigned": "Our solutions are designed to enhance efficiency, transparency, and public trust.",
+    "seoSolutions": "SEO Agencies Solutions",
+    "seoDescription": "Empower your SEO strategies with our advanced tools and platforms:",
+    "keywordResearch": "Keyword research and analytics",
+    "siteAudit": "Site audit and optimization",
+    "contentManagement": "Content management systems",
+    "backlinkMonitoring": "Backlink monitoring",
+    "seoBoost": "Boost your clients' search engine rankings and drive more organic traffic with our expert solutions."
   }
 }
