--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -397,5 +397,48 @@
         "Laravel": "エレガントな構文と堅牢なツールを提供する、Web職人向けのPHPフレームワーク。"
       }
     }
+  },
+  "products": {
+    "ourProducts": "私たちの製品",
+    "govt": "政府",
+    "seo": "SEO代理店向けERP",
+    "financial": "金融機関",
+    "corporate": "企業",
+    "ecommerce": "Eコマース",
+    "corporateSolutions": "企業向けソリューション",
+    "corporateDescription": "革新的なソフトウェアソリューションで企業の業務を効率化:",
+    "erp": "エンタープライズリソースプランニング（ERP）",
+    "crm": "顧客関係管理（CRM）",
+    "hrms": "人事管理システム（HRMS）",
+    "dataAnalytics": "データ分析とレポート",
+    "corporateEnhance": "カスタマイズされたソリューションで、ビジネスの効率と意思決定プロセスを強化します。",
+    "ecommerceSolutions": "Eコマースソリューション",
+    "ecommerceDescription": "包括的なEコマースソリューションでオンライン販売を最大化:",
+    "customStore": "カスタマイズ可能なオンラインストアプラットフォーム",
+    "paymentGateway": "ペイメントゲートウェイの統合",
+    "inventoryManagement": "在庫管理システム",
+    "customerExperience": "顧客エクスペリエンスの向上",
+    "ecommerceGrow": "スケーラブルで安全なソリューションでEコマースビジネスを成長させます。",
+    "financialSolutions": "金融機関向けソリューション",
+    "financialDescription": "当社の金融ソフトウェアソリューションは、金融機関のパフォーマンスとセキュリティを強化するように設計されています。",
+    "onlineBanking": "オンラインバンキングプラットフォーム",
+    "fraudDetection": "不正検出システム",
+    "investmentManagement": "投資管理ツール",
+    "riskManagement": "リスク管理ソリューション",
+    "financialEnsure": "最先端のテクノロジーで、組織の成長と信頼性を確保します。",
+    "govtSolutions": "政府機関向けソリューション",
+    "govtDescription": "政府機関向けに調整された包括的なソフトウェアソリューションを提供しています。サービス内容は以下のとおりです。",
+    "publicAdmin": "行政システム",
+    "eGovernance": "Eガバナンスプラットフォーム",
+    "dataSecurity": "データセキュリティと管理",
+    "citizenEngagement": "市民エンゲージメントツール",
+    "govtDesigned": "当社のソリューションは、効率、透明性、および国民の信頼を高めるように設計されています。",
+    "seoSolutions": "SEO代理店向けソリューション",
+    "seoDescription": "高度なツールとプラットフォームでSEO戦略を強化:",
+    "keywordResearch": "キーワード調査と分析",
+    "siteAudit": "サイト監査と最適化",
+    "contentManagement": "コンテンツ管理システム",
+    "backlinkMonitoring": "バックリンク監視",
+    "seoBoost": "専門的なソリューションで、クライアントの検索エンジンのランキングを上げ、オーガニックトラフィックを増やします。"
   }
 }
