--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -370,6 +370,23 @@
         "title": "コスト削減",
         "text": "LLMベースのソリューションによる日常業務の最適化 - ルーチン業務をサポートするためにLLMベースのソリューションを実装することにより、日常の運用コストを削減します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
       }
+    ],
+    "ourServices": [
+      {
+        "image": "webdev.jpg",
+        "title": "ウェブ開発",
+        "description": "お客様のビジネスニーズに合わせた、モダンでレスポンシブ、かつユーザーフレンドリーなウェブサイトの作成を専門としています。"
+      },
+      {
+        "image": "mobiledev.jpg",
+        "title": "モバイルアプリ開発",
+        "description": "ユーザーを惹きつけ、ブランドを向上させる強力なモバイルアプリケーションで、あなたのアイデアを形にします。"
+      },
+      {
+        "image": "uiux.jpg",
+        "title": "UI/UXデザイン",
+        "description": "聴衆を魅了し、ユーザーエクスペリエンスを高める、視覚的に魅力的で直感的なインターフェースを作成します。"
+      }
     ]
   },
   "technologyList": {
