--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -378,6 +378,23 @@
         "title": "خفض التكاليف",
         "text": "تحسين العمليات اليومية باستخدام حلول تعتمد على نماذج اللغات الكبيرة - خفض التكاليف التشغيلية اليومية من خلال تنفيذ حلول تعتمد على نماذج اللغات الكبيرة لدعم العمليات الروتينية. هذا نص إضافي للبطاقة سيتم الكشف عنه عند النقر على الزر."
       }
+    ],
+    "ourServices": [
+      {
+        "image": "webdev.jpg",
+        "title": "تطوير المواقع",
+        "description": "نحن متخصصون في إنشاء مواقع ويب حديثة ومتجاوبة وسهلة الاستخدام مصممة خصيصًا لتلبية احتياجات عملك."
+      },
+      {
+        "image": "mobiledev.jpg",
+        "title": "تطوير تطبيقات الجوال",
+        "description": "حول أفكارك إلى تطبيقات جوال قوية تجذب المستخدمين وتعزز علامتك التجارية."
+      },
+      {
+        "image": "uiux.jpg",
+        "title": "تصميم واجهة المستخدم/تجربة المستخدم",
+        "description": "صمم واجهات مذهلة بصريًا وبديهية تأسر جمهورك وترتقي بتجربة المستخدم."
+      }
     ]
   },
 
