--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -379,6 +379,23 @@
         "title": "খরচ কমানো",
         "text": "এলএলএম-ভিত্তিক সমাধানগুলির সাথে দৈনন্দিন কার্যক্রম অপ্টিমাইজ করা - রুটিন কার্যক্রম সমর্থন করার জন্য এলএলএম-ভিত্তিক সমাধান প্রয়োগ করে দৈনন্দিন অপারেশনাল খরচ কমান। এটি কার্ডের অতিরিক্ত পাঠ্য যা বোতাম ক্লিক করা হলে প্রকাশ করা হবে।"
       }
+    ],
+    "ourServices": [
+      {
+        "image": "webdev.jpg",
+        "title": "ওয়েব ডেভেলপমেন্ট",
+        "description": "আমরা আপনার ব্যবসার প্রয়োজন অনুসারে আধুনিক, প্রতিক্রিয়াশীল এবং ব্যবহারকারী-বান্ধব ওয়েবসাইট তৈরি করতে বিশেষজ্ঞ।"
+      },
+      {
+        "image": "mobiledev.jpg",
+        "title": "মোবাইল অ্যাপ ডেভেলপমেন্ট",
+        "description": "আপনার ধারণাগুলিকে শক্তিশালী মোবাইল অ্যাপ্লিকেশনে রূপান্তর করুন যা ব্যবহারকারীদের আকৃষ্ট করে এবং আপনার ব্র্যান্ডকে উন্নত করে।"
+      },
+      {
+        "image": "uiux.jpg",
+        "title": "UI/UX ডিজাইন",
+        "description": "দৃষ্টি নন্দন এবং স্বজ্ঞাত ইন্টারফেস তৈরি করুন যা আপনার দর্শকদের মুগ্ধ করে এবং ব্যবহারকারীর অভিজ্ঞতা উন্নত করে।"
+      }
     ]
   },
   "technologyList": {
