--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -395,7 +395,29 @@
         "title": "تصميم واجهة المستخدم/تجربة المستخدم",
         "description": "صمم واجهات مذهلة بصريًا وبديهية تأسر جمهورك وترتقي بتجربة المستخدم."
       }
-    ]
+    ],
+    "webDev": {
+      "header": "تتخصص BIRDS OF EDEN في بناء مواقع ويب ديناميكية وسهلة الاستخدام مصممة لمساعدتك في تحقيق أهدافك عبر الإنترنت وتعزيز تواجدك الرقمي.",
+      "list": [
+        {
+          "title": "حلول ويب مخصصة",
+          "description": "نقوم بتطوير مواقع ويب مخصصة مصممة خصيصًا لتلبية متطلبات عملك الفريدة، مما يضمن تجربة مستخدم شخصية وجذابة."
+        },
+        {
+          "title": "تصميم متجاوب",
+          "description": "تم تحسين مواقع الويب الخاصة بنا لجميع الأجهزة وأحجام الشاشات، مما يضمن وظائف سلسة وإمكانية الوصول عبر أجهزة سطح المكتب والأجهزة اللوحية والهواتف الذكية."
+        },
+        {
+          "title": "إدارة المحتوى",
+          "description": "باستخدام أنظمة إدارة المحتوى (CMS) البديهية، يمكنك التحكم الكامل في محتوى موقع الويب الخاص بك، مما يسمح بالتحديثات والتعديلات بسهولة."
+        },
+        {
+          "title": "تكامل تحسين محركات البحث",
+          "description": "نحن ندمج أفضل ممارسات تحسين محركات البحث (SEO) لتحسين رؤية موقع الويب الخاص بك وترتيبه في صفحات نتائج محرك البحث (SERPs)، مما يدفع حركة المرور العضوية ويزيد من تواجدك عبر الإنترنت."
+        }
+      ],
+      "footer": "تعاون معنا لتحويل تواجدك عبر الإنترنت وتحقيق أهداف عملك من خلال حلول الويب المبتكرة والفعالة."
+    }
   },
 
   "technologyList": {
