--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -396,7 +396,29 @@
         "title": "UI/UX ডিজাইন",
         "description": "দৃষ্টি নন্দন এবং স্বজ্ঞাত ইন্টারফেস তৈরি করুন যা আপনার দর্শকদের মুগ্ধ করে এবং ব্যবহারকারীর অভিজ্ঞতা উন্নত করে।"
       }
-    ]
+    ],
+    "webDev": {
+      "header": "বার্ডস অফ ইডেন আপনার অনলাইন লক্ষ্য অর্জনে এবং আপনার ডিজিটাল উপস্থিতি বাড়াতে সাহায্য করার জন্য তৈরি করা গতিশীল এবং ব্যবহারকারী-বান্ধব ওয়েবসাইট তৈরিতে বিশেষজ্ঞ।",
+      "list": [
+        {
+          "title": "কাস্টম ওয়েব সমাধান",
+          "description": "আমরা আপনার অনন্য ব্যবসার প্রয়োজনীয়তা অনুসারে তৈরি করা বেসপোক ওয়েবসাইট তৈরি করি, যা একটি ব্যক্তিগতকৃত এবং আকর্ষক ব্যবহারকারীর অভিজ্ঞতা নিশ্চিত করে।"
+        },
+        {
+          "title": "প্রতিক্রিয়াশীল ডিজাইন",
+          "description": "আমাদের ওয়েবসাইটগুলি সমস্ত ডিভাইস এবং স্ক্রীন আকারের জন্য অপ্টিমাইজ করা হয়েছে, ডেস্কটপ, ট্যাবলেট এবং স্মার্টফোন জুড়ে নিরবচ্ছিন্ন কার্যকারিতা এবং অ্যাক্সেসযোগ্যতা নিশ্চিত করে।"
+        },
+        {
+          "title": "বিষয়বস্তু ব্যবস্থাপনা",
+          "description": "স্বজ্ঞাত বিষয়বস্তু ব্যবস্থাপনা সিস্টেম (CMS) এর মাধ্যমে, আপনার ওয়েবসাইট বিষয়বস্তুর উপর সম্পূর্ণ নিয়ন্ত্রণ থাকে, যা সহজ আপডেট এবং পরিবর্তনের অনুমতি দেয়।"
+        },
+        {
+          "title": "এসইও ইন্টিগ্রেশন",
+          "description": "আমরা সার্চ ইঞ্জিন অপ্টিমাইজেশান (এসইও) সর্বোত্তম অনুশীলনগুলিকে অন্তর্ভুক্ত করি যাতে সার্চ ইঞ্জিন ফলাফল পৃষ্ঠাগুলিতে (SERPs) আপনার ওয়েবসাইটের দৃশ্যমানতা এবং র‍্যাঙ্কিং উন্নত করা যায়, জৈব ট্র্যাফিক চালনা করা যায় এবং আপনার অনলাইন উপস্থিতি বৃদ্ধি করা যায়।"
+        }
+      ],
+      "footer": "উদ্ভাবনী এবং কার্যকর ওয়েব সমাধানের মাধ্যমে আপনার অনলাইন উপস্থিতি রূপান্তর করতে এবং আপনার ব্যবসার উদ্দেশ্য অর্জন করতে আমাদের সাথে অংশীদার হন।"
+    }
   },
   "technologyList": {
     "ourTechnology": "আমাদের প্রযুক্তি",
