--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -387,7 +387,29 @@
         "title": "UI/UXデザイン",
         "description": "聴衆を魅了し、ユーザーエクスペリエンスを高める、視覚的に魅力的で直感的なインターフェースを作成します。"
       }
-    ]
+    ],
+    "webDev": {
+      "header": "BIRDS OF EDENは、オンライン目標の達成とデジタルプレゼンスの向上を支援するために、ダイナミックでユーザーフレンドリーなウェブサイトの構築を専門としています。",
+      "list": [
+        {
+          "title": "カスタムウェブソリューション",
+          "description": "お客様の独自のビジネス要件に合わせてカスタマイズされたオーダーメイドのウェブサイトを開発し、パーソナライズされた魅力的なユーザーエクスペリエンスを保証します。"
+        },
+        {
+          "title": "レスポンシブデザイン",
+          "description": "当社のウェブサイトはすべてのデバイスと画面サイズに最適化されており、デスクトップ、タブレット、スマートフォン全体でシームレスな機能とアクセシビリティを保証します。"
+        },
+        {
+          "title": "コンテンツ管理",
+          "description": "直感的なコンテンツ管理システム（CMS）により、ウェブサイトのコンテンツを完全に制御でき、簡単な更新と変更が可能です。"
+        },
+        {
+          "title": "SEO統合",
+          "description": "検索エンジンの最適化（SEO）のベストプラクティスを組み込んで、検索エンジンの検索結果ページ（SERPs）でのウェブサイトの可視性とランキングを向上させ、オーガニックトラフィックを促進し、オンラインプレゼンスを高めます。"
+        }
+      ],
+      "footer": "革新的で効果的なウェブソリューションを通じて、オンラインプレゼンスを変革し、ビジネス目標を達成するために、私たちと協力してください。"
+    }
   },
   "technologyList": {
     "ourTechnology": "私たちのテクノロジー",
